added join event
